# lore

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/lore-core/: Cargo.toml
crates/lore-core/src/: lib.rs
crates/lore-index/: Cargo.toml
crates/lore-index/benches/: build.rs
crates/lore-index/examples/: dump_tree.rs
crates/lore-index/src/: access.rs  builder.rs  corpus.rs  lib.rs  model.rs  query.rs  serialize.rs
crates/lore-index/tests/: properties.rs
crates/lore-parse/: Cargo.toml
crates/lore-parse/src/: frontmatter.rs  headings.rs  lib.rs  links.rs  obsidian.rs  options.rs  summary.rs
crates/lore-search/: Cargo.toml
crates/lore-search/benches/: search.rs
crates/lore-search/src/: bm25.rs  lib.rs
crates/lore-watch/: Cargo.toml
crates/lore-watch/src/: lib.rs
docs/decisions/: 0001-dogfood-knowledge-base.md  0002-effectiveness-notes.md
services/lore/: Cargo.toml
services/lore/src/: cli.rs  config.rs  lib.rs  main.rs  walker.rs  watch.rs
services/lore/src/mcp/: mod.rs  registry.rs  server.rs  tools.rs  transport.rs
services/lore/tests/: index_roundtrip.rs  mcp_server.rs  watch.rs
services/lore/tests/fixtures/mini-kb/: README.md
services/lore/tests/fixtures/mini-kb/docs/: architecture.md  intro.md
