[package]
name = "lore-parse"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Markdown parsing for Lore — pulldown-cmark events with byte offsets, frontmatter split, and wiki-link extraction."

[dependencies]
lore-core = { workspace = true }
pulldown-cmark = { workspace = true }
gray_matter = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
