[package]
name = "lore"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lore: an MCP server for structure-aware markdown retrieval."

[[bin]]
name = "lore"
path = "src/main.rs"

[lib]
name = "lore_service"
path = "src/lib.rs"

[dependencies]
lore-core = { workspace = true }
lore-parse = { workspace = true }
lore-index = { workspace = true }
lore-search = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ignore = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
schemars = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
memmap2 = { workspace = true }
parking_lot = "0.12"
lore-watch = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
